test/tests/compiler/6_statements_and_conditional_expressions/valid/extra_credit/compound_assign_ternary.plx
pub fn main(none) i32 {
    a: i32 = 4
    a *= ? 1 then 2 else 3
    return a
}

