test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/malformed_ternary.plx
pub fn main(none) i32 {
    return ? 1 then 2 else 3 else 4
}
